# prep-alert

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PrepAlert.aps  PrepAlert.rc  PrepAlert.sln  PrepAlert.vcxproj  PrepAlert.vcxproj.filters  README.md  resource.h  version.bat
data/: maps_raw.json
scripts/: get-maps.py
scripts/map_data_patcher/: buffs.py  main.py  models.py  patches.py
src/: Main.cpp  PrepAlert.rc  Resource.h  Version.h  buffs.cpp  buffs.h  maps.json  resource.h
src/Common/: BuffData.h  Constants.h  Globals.cpp  Globals.h  Types.h  Utils.cpp  Utils.h
src/Controller/: Controller.cpp  Controller.h
src/Core/: Addon.cpp  Addon.h  Events.cpp  Events.h  Hooks.cpp  Hooks.h
src/Data/: MapData.cpp  MapData.h  SettingsManager.cpp  SettingsManager.h  SettingsSerialization.cpp  SettingsSerialization.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Logic/: Logic.cpp
src/UI/Debug/: Debug.cpp  Debug.h
src/UI/Overlay/: Overlay.cpp  Overlay.h
src/UI/Settings/: Settings.cpp  Settings.h
